--- a/place.html
+++ b/place.html
@@ -29,13 +29,39 @@
         <span class="qq"></span>
       </nav>
     </header>
-    <img src="img/place-header-slogan.png" class="slogan" alt="123">
-    <p>别墅轰趴馆</p>
-    <div class="strip"></div>
+    <aside>
+      <img src="img/place-header-slogan.png" class="slogan" alt="123">
+      <p>别墅轰趴馆</p>
+      <div class="strip"></div>
+    </aside>
+    <div class="daily">
+      <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
+      <div class="dailyPic">
+        <ul>
+          <li><img src="img/daily-img-1.jpg" alt="123"></li>
+          <li><img src="img/daily-img-2.jpg" alt="123"></li>
+          <li><img src="img/daily-img-3.jpg" alt="123"></li>
+        </ul>
+        <div class="daily-slideBtn">
+          <span class="daily-slideBtn-style prev">1</span>
+          <span class="daily-slideBtn-style next active">1</span>
+        </div>
+      </div>
+      <div class="daily-bg"></div>
+      <h1>夏威夷<br>别墅轰趴馆</h1>
+      <div class="strip1"></div>
+      <p class="dailyContent">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+      <div class="detailBtn dailyDetailBtn">VIEW</div>
+    </div>
   </div>
 
-  <section>
-    123
+  <section class="typeList clearfix">
+    <h2>异域风情<span><i></i><i></i><i></i></span></h2>
+    <div class="colList">
+      <div class="product">
+        123
+      </div>
+    </div>
   </section>
 
   <script src="js/jquery-2.0.0.min.js"></script>
