--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class="slideBtn prevBtn" id="prevBtn"></div>
     <div class="slideBtn nextBtn" id="nextBtn"></div>
     <ul class="slidePoint" id="slidePoint">
-      <li index="1"></li>
-      <li index="2"></li>
-      <li index="3"></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
   </div>
 
@@ -64,9 +64,7 @@
       <a href="place.html">所有场地</a>
       <a href="food.html">餐饮</a>
       <a href="photo.html">照片墙</a>
-      <span class="call"></span>
-      <span class="wechat"></span>
-      <span class="qq"></span>
+      <span>400-8008-8008</span>
     </nav>
   </header>
   <!--底部-->
@@ -80,6 +78,14 @@
     </nav>
     <p>上海张江高科张衡路111号 111号 Copyright 2015 沪ICP备14020292</p>
   </footer>
+  <!--回到顶部-->
+  <ul class="stick">
+    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
+    <li class="backtop">TOP</li>
+  </ul>
+  <div class="erweima">
+    <img src="img/wechat.png" alt="123">
+  </div>
 
   <!--JS文件-->
   <script src="js/jquery-2.0.0.min.js"></script>
