--- a/place.html
+++ b/place.html
@@ -16,7 +16,8 @@
 </head>
 
 <body>
-  <div class="topBox">
+  <!--首屏-->
+  <div class="topBox placeTop">
     <header>
       <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
       <nav>
@@ -24,9 +25,7 @@
         <a href="place.html" class="active">所有场地</a>
         <a href="food.html">餐饮</a>
         <a href="photo.html">照片墙</a>
-        <span class="call"></span>
-        <span class="wechat"></span>
-        <span class="qq"></span>
+        <span>400-8008-8008</span>
       </nav>
     </header>
     <aside class="slogan">
@@ -55,8 +54,9 @@
     </article>
     <div class="scrolldown">滑动更多内容</div>
   </div>
-
+  <!--主要内容-->
   <div class="container">
+    <!--分类-->
     <section class="typeList clearfix">
       <div class="typeList-title">
         <h2>异域风情</h2>
@@ -119,7 +119,7 @@
         </div>
       </div>
     </section>
-
+    <!--分类-->
     <section class="typeList clearfix">
       <div class="typeList-title">
         <h2>异域风情</h2>
@@ -184,7 +184,7 @@
     </section>
     <div class="seeMore">查看更多</div>
   </div>
-
+  <!--页尾-->
   <footer>
     <aside class="footerPic"></aside>
     <div class="info">
@@ -200,6 +200,16 @@
       </div>
     </div>
   </footer>
+
+  <!--回到顶部-->
+  <ul class="stick">
+    <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
+    <li class="backtop">TOP</li>
+  </ul>
+  <div class="erweima">
+    <img src="img/wechat.png" alt="123">
+  </div>
+
   <script src="js/jquery-2.0.0.min.js"></script>
   <script src="js/place.js"></script>
 
