--- a/food.html
+++ b/food.html
@@ -17,13 +17,13 @@
 
 <body>
   <!--首屏-->
-  <div class="topBox placeTop">
+  <div class="topBox foodeTop">
     <header>
       <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
       <nav>
         <a href="index.html">首页</a>
-        <a href="place.html" class="active">所有场地</a>
-        <a href="food.html">餐饮</a>
+        <a href="place.html">所有场地</a>
+        <a href="food.html" class="active">餐饮</a>
         <a href="photo.html">照片墙</a>
         <span>400-8008-8008</span>
       </nav>
