--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Document</title>
+  <title>【蓝派】关于我们</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/place.css">
   <!--[if lte IE 9]>
@@ -43,25 +43,64 @@
   </div>
   <!--主要内容-->
   <div class="about-container">
+    <!--关于我们-->
     <section class="aboutus">
       <h2>Who We Are?</h2>
       <div class="aboutus-content">
-        <img src="img/about/who-we-are.jpg" alt="123">
-        <article class="aboutus-info">
-          <h3>关于我们</h3>
-          <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
-          <p>我们的服务理念： 【 The Best or Nothing ！ 】 一直被模仿，从未被超越！</p>
+        <img src="img/about/who-we-are.jpg" alt="123" class="flyLeftAnimate">
+        <article class="aboutus-info flyRightAnimate">
+          <div class="aboutus-info-text">
+            <h3>关于我们</h3>
+            <div class="line"></div>
+            <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
+            <p><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
+          </div>
         </article>
       </div>
     </section>
+    <!--联系我们-->
     <section class="contactus">
       <h2>Get In Touch.</h2>
       <div class="contactus-content clearfix">
-        <img src="img/about/who-we-are.jpg" alt="123">
-        <article class="contactus-info">
-          <h3>关于我们</h3>
-          <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
-          <p>我们的服务理念： 【 The Best or Nothing ！ 】 一直被模仿，从未被超越！</p>
+        <img src="img/about/contact-bg.jpg" alt="123" class="flyRightAnimate">
+        <article class="contactus-info flyLeftAnimate">
+          <div class="line"></div>
+          <div class="contactus-info-text">
+            <h3>联系我们 / 商务合作</h3>
+            <div class="contactus-info-text-left">
+              <p><span></span>Write</br>Us</p>
+              <p><span></span>Call</br>Us</p>
+              <p><span></span>Visit</br>Us</p>
+            </div>
+            <div class="contactus-info-text-right">
+              <p>hao@lanpai.com</p>
+              <p>021-6565656</p>
+              <p>上海浦东创新大道1号</p>
+            </div>
+          </div>
+        </article>
+      </div>
+    </section>
+    <!--伙伴-->
+    <section class="contactus">
+      <h2>Get In Touch.</h2>
+      <div class="contactus-content clearfix">
+        <img src="img/about/contact-bg.jpg" alt="123" class="flyRightAnimate">
+        <article class="contactus-info flyLeftAnimate">
+          <div class="line"></div>
+          <div class="contactus-info-text">
+            <h3>联系我们 / 商务合作</h3>
+            <div class="contactus-info-text-left">
+              <p><span></span>Write</br>Us</p>
+              <p><span></span>Call</br>Us</p>
+              <p><span></span>Visit</br>Us</p>
+            </div>
+            <div class="contactus-info-text-right">
+              <p>hao@lanpai.com</p>
+              <p>021-6565656</p>
+              <p>上海浦东创新大道1号</p>
+            </div>
+          </div>
         </article>
       </div>
     </section>
