--- a/place.html
+++ b/place.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>Document</title>
+  <meta name="renderer" content="webkit">
+  <title>【蓝派】--别墅轰趴馆</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/place.css">
   <!--[if lte IE 9]>
@@ -58,11 +58,11 @@
   <div class="container">
     <!--分类-->
     <section class="typeList clearfix">
-      <div class="typeList-title">
+      <div class="typeList-title flyLeftAnimate">
         <h2>异域风情</h2>
         <span><i></i><i></i><i></i></span>
       </div>
-      <div class="colList clearfix">
+      <div class="colList clearfix flyRightAnimate">
         <div class="product left">
           <div class="productPic">
             <img src="img/place-list/place-list-1.jpg" alt="123">
@@ -90,7 +90,7 @@
           <div class="detailBtn productBtn">VIEW</div>
         </div>
       </div>
-      <div class="colList clearfix">
+      <div class="colList clearfix flyRightAnimate">
         <div class="product left">
           <div class="productPic">
             <img src="img/place-list/place-list-1.jpg" alt="123">
@@ -121,11 +121,11 @@
     </section>
     <!--分类-->
     <section class="typeList clearfix">
-      <div class="typeList-title">
+      <div class="typeList-title flyLeftAnimate">
         <h2>异域风情</h2>
         <span><i></i><i></i><i></i></span>
       </div>
-      <div class="colList clearfix">
+      <div class="colList clearfix flyRightAnimate">
         <div class="product left">
           <div class="productPic">
             <img src="img/place-list/place-list-1.jpg" alt="123">
@@ -153,7 +153,7 @@
           <div class="detailBtn productBtn">VIEW</div>
         </div>
       </div>
-      <div class="colList clearfix">
+      <div class="colList clearfix flyRightAnimate">
         <div class="product left">
           <div class="productPic">
             <img src="img/place-list/place-list-1.jpg" alt="123">
@@ -183,6 +183,28 @@
       </div>
     </section>
     <div class="seeMore">查看更多</div>
+  </div>
+  <!--弹出详情-->
+  <div class="detailCover">
+    <section class="detailContent">
+      <h2>夏威夷别墅轰趴馆<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
+      <div class="detailPic picSlideBox clearfix">
+        <ul class="picSlideBig">
+          <li><img src="img/details/place-details-1.jpg" alt="123"></li>
+          <li><img src="img/details/place-details-2.jpg" alt="123"></li>
+          <li><img src="img/details/place-details-3.jpg" alt="123"></li>
+          <li><img src="img/details/place-details-4.jpg" alt="123"></li>
+          <li><img src="img/details/place-details-5.jpg" alt="123"></li>
+        </ul>
+        <!--<ul class="picSlideSmall">
+          <li><img src="img/details/place-details-1.jpg" alt="123"></li>
+        </ul>-->
+        <div>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </section>
   </div>
   <!--页尾-->
   <footer>
