--- a/place.html
+++ b/place.html
@@ -187,21 +187,29 @@
   <!--弹出详情-->
   <div class="detailCover">
     <section class="detailContent">
-      <h2>夏威夷别墅轰趴馆<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
-      <div class="detailPic picSlideBox clearfix">
-        <ul class="picSlideBig">
-          <li><img src="img/details/place-details-1.jpg" alt="123"></li>
-          <li><img src="img/details/place-details-2.jpg" alt="123"></li>
-          <li><img src="img/details/place-details-3.jpg" alt="123"></li>
-          <li><img src="img/details/place-details-4.jpg" alt="123"></li>
-          <li><img src="img/details/place-details-5.jpg" alt="123"></li>
-        </ul>
-        <!--<ul class="picSlideSmall">
-          <li><img src="img/details/place-details-1.jpg" alt="123"></li>
-        </ul>-->
-        <div>
-          <span></span>
-          <span></span>
+      <div class="comWidth">
+        <h2>夏威夷别墅轰趴馆<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
+        <div class="detailPic picSlideBox clearfix">
+          <ul class="picSlideBig">
+            <li><img src="img/details/place-details-1.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-2.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-3.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-4.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-5.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-6.jpg" alt="123"></li>
+          </ul>
+          <div class="picSlideSmallBox">
+            <ul class="picSlideSmall">
+              <li><img src="img/details/place-details-1.jpg" alt="123"></li>
+              <li><img src="img/details/place-details-2.jpg" alt="123"></li>
+              <li><img src="img/details/place-details-3.jpg" alt="123"></li>
+              <li><img src="img/details/place-details-4.jpg" alt="123"></li>
+              <li><img src="img/details/place-details-5.jpg" alt="123"></li>
+              <li><img src="img/details/place-details-6.jpg" alt="123"></li>
+            </ul>
+          </div>
+          <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
+          <span class="picSlideBtn next" id="picSlideBtnNext"></span>
         </div>
       </div>
     </section>
