--- a/place.html
+++ b/place.html
@@ -211,6 +211,26 @@
           <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
           <span class="picSlideBtn next" id="picSlideBtnNext"></span>
         </div>
+        <div class="detailInfo">
+          <h3>详细信息</h3>
+          <ul class="detailInfoText">
+            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
+            <li class="clearfix">
+              <span>场地功能</span>
+              <i>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                </ul>
+              </i>
+            </li>
+            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
+            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
+            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
+          </ul>
+        </div>
       </div>
     </section>
   </div>
