--- a/photo.html
+++ b/photo.html
@@ -16,54 +16,68 @@
 </head>
 
 <body>
-  <!--[if lte IE 9]>
-    <p>您的浏览器版本过低，建议您升级浏览器。</p>
-    <style type="text/css">
-      header,footer,div {
-      display: none;
-      }
-
-      body {
-        background-color: #000919;
-      }
-    </style>
-  <![endif]-->
 
   <!--全屏轮播-->
   <div class="fullpage-ad">
     <ul class="slide-ad" id="slideAd">
       <li>
-        <span class="index-bg index-bg-1"></span>
-      </li>
-      <li>
-        <span class="index-bg index-bg-2"></span>
-      </li>
-      <li>
-        <span class="index-bg index-bg-3"></span>
+        <span class="index-bg photo-bg"></span>
       </li>
     </ul>
-    <div class="ad-content ad-content-1">
-      <img src="img/index-ad-1(1).png" class="num1" alt="123">
-      <span></span>
-      <img src="img/index-ad-1(2).png" class="num2" alt="123">
+    <div class="photoList">
+      <ul>
+        <li>
+          <img src="img/daily-img-1.jpg" alt="">
+          <i class="topLine"></i>
+          <i class="rightLine"></i>
+          <i class="bottomLine"></i>
+          <i class="leftLine"></i>
+          <span class="teamName">某团队活动<em>观看相册</em></span>
+        </li>
+        <li>
+          <img src="img/daily-img-1.jpg" alt="">
+          <i class="topLine"></i>
+          <i class="rightLine"></i>
+          <i class="bottomLine"></i>
+          <i class="leftLine"></i>
+          <span class="teamName">某团队活动<em>观看相册</em></span>
+        </li>
+        <li>
+          <img src="img/daily-img-1.jpg" alt="">
+          <i class="topLine"></i>
+          <i class="rightLine"></i>
+          <i class="bottomLine"></i>
+          <i class="leftLine"></i>
+          <span class="teamName">某团队活动<em>观看相册</em></span>
+        </li>
+        <li>
+          <img src="img/daily-img-1.jpg" alt="">
+          <i class="topLine"></i>
+          <i class="rightLine"></i>
+          <i class="bottomLine"></i>
+          <i class="leftLine"></i>
+          <span class="teamName">某团队活动<em>观看相册</em></span>
+        </li>
+        <li>
+          <img src="img/daily-img-1.jpg" alt="">
+          <i class="topLine"></i>
+          <i class="rightLine"></i>
+          <i class="bottomLine"></i>
+          <i class="leftLine"></i>
+          <span class="teamName">某团队活动<em>观看相册</em></span>
+        </li>
+      </ul>
     </div>
-    <div class="slideBtn prevBtn" id="prevBtn"></div>
-    <div class="slideBtn nextBtn" id="nextBtn"></div>
-    <ul class="slidePoint" id="slidePoint">
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
   </div>
 
   <!--头部-->
   <header>
     <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
     <nav>
-      <a href="index.html" class="active">首页</a>
+      <a href="index.html">首页</a>
       <a href="place.html">所有场地</a>
       <a href="food.html">餐饮</a>
-      <a href="photo.html">照片墙</a>
+      <a href="photo.html" class="active">照片墙</a>
       <span>400-8008-8008</span>
     </nav>
   </header>
