--- a/place.html
+++ b/place.html
@@ -198,23 +198,14 @@
             <li><img src="img/details/place-details-5.jpg" alt="123"></li>
             <li><img src="img/details/place-details-6.jpg" alt="123"></li>
           </ul>
-          <div class="picSlideSmallBox">
-            <ul class="picSlideSmall">
-              <li><img src="img/details/place-details-1.jpg" alt="123"></li>
-              <li><img src="img/details/place-details-2.jpg" alt="123"></li>
-              <li><img src="img/details/place-details-3.jpg" alt="123"></li>
-              <li><img src="img/details/place-details-4.jpg" alt="123"></li>
-              <li><img src="img/details/place-details-5.jpg" alt="123"></li>
-              <li><img src="img/details/place-details-6.jpg" alt="123"></li>
-            </ul>
-          </div>
+          <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
           <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
           <span class="picSlideBtn next" id="picSlideBtnNext"></span>
         </div>
         <div class="detailInfo">
           <h3>详细信息</h3>
           <ul class="detailInfoText">
-            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
             <li class="clearfix">
               <span>场地功能</span>
               <i>
@@ -226,9 +217,8 @@
                 </ul>
               </i>
             </li>
-            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
-            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
-            <li><span>场地功能</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
           </ul>
         </div>
       </div>
@@ -254,7 +244,7 @@
   <!--回到顶部-->
   <ul class="stick">
     <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
-    <li class="backtop">TOP</li>
+    <li class="backtop"><a href="#top">TOP</a></li>
   </ul>
   <div class="erweima">
     <img src="img/wechat.png" alt="123">
