--- a/photo.html
+++ b/photo.html
@@ -26,7 +26,7 @@
     </ul>
     <div class="photoList">
       <ul>
-        <li>
+        <li class="viewPhotos">
           <img src="img/daily-img-1.jpg" alt="">
           <i class="topLine"></i>
           <i class="rightLine"></i>
@@ -98,6 +98,27 @@
   </ul>
   <div class="erweima">
     <img src="img/wechat.png" alt="123">
+  </div>
+  <!--弹出层-->
+  <div class="detailCover">
+    <!--<section class="detailContent">-->
+      <h2>某团队活动纪念照片<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
+      <div class="detailPic picSlideBox clearfix">
+        <ul class="picSlideBig">
+          <li><img src="img/photos/photo-details-1.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-2.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-3.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-4.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-5.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-6.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-7.jpg" alt="123"></li>
+          <li><img src="img/photos/photo-details-8.jpg" alt="123"></li>
+        </ul>
+        <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
+        <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
+        <span class="picSlideBtn next" id="picSlideBtnNext"></span>
+      </div>
+    <!--</section>-->
   </div>
 
   <!--JS文件-->
