--- a/food.html
+++ b/food.html
@@ -204,7 +204,7 @@
   <!--回到顶部-->
   <ul class="stick">
     <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
-    <li class="backtop">TOP</li>
+    <li class="backtop"><a href="#top">TOP</a></li>
   </ul>
   <div class="erweima">
     <img src="img/wechat.png" alt="123">
