update-0906-13:25  pc complete

--- a/food.html
+++ b/food.html
@@ -184,6 +184,46 @@
     </section>
     <div class="seeMore">查看更多</div>
   </div>
+  <!--弹出详情-->
+  <div class="detailCover">
+    <section class="detailContent">
+      <div class="comWidth">
+        <h2>夏威夷别墅轰趴馆<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
+        <div class="detailPic picSlideBox clearfix">
+          <ul class="picSlideBig">
+            <li><img src="img/details/place-details-1.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-2.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-3.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-4.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-5.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-6.jpg" alt="123"></li>
+          </ul>
+          <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
+          <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
+          <span class="picSlideBtn next" id="picSlideBtnNext"></span>
+        </div>
+        <div class="detailInfo">
+          <h3>详细信息</h3>
+          <ul class="detailInfoText">
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+            <li class="clearfix">
+              <span>场地功能</span>
+              <i>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                </ul>
+              </i>
+            </li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </div>
   <!--页尾-->
   <footer>
     <aside class="footerPic"></aside>
