--- a/photo.html
+++ b/photo.html
@@ -34,7 +34,7 @@
           <i class="leftLine"></i>
           <span class="teamName">某团队活动<em>观看相册</em></span>
         </li>
-        <li>
+        <li class="viewPhotos">
           <img src="img/daily-img-1.jpg" alt="">
           <i class="topLine"></i>
           <i class="rightLine"></i>
@@ -42,7 +42,7 @@
           <i class="leftLine"></i>
           <span class="teamName">某团队活动<em>观看相册</em></span>
         </li>
-        <li>
+        <li class="viewPhotos">
           <img src="img/daily-img-1.jpg" alt="">
           <i class="topLine"></i>
           <i class="rightLine"></i>
@@ -50,7 +50,7 @@
           <i class="leftLine"></i>
           <span class="teamName">某团队活动<em>观看相册</em></span>
         </li>
-        <li>
+        <li class="viewPhotos">
           <img src="img/daily-img-1.jpg" alt="">
           <i class="topLine"></i>
           <i class="rightLine"></i>
@@ -58,7 +58,7 @@
           <i class="leftLine"></i>
           <span class="teamName">某团队活动<em>观看相册</em></span>
         </li>
-        <li>
+        <li class="viewPhotos">
           <img src="img/daily-img-1.jpg" alt="">
           <i class="topLine"></i>
           <i class="rightLine"></i>
@@ -68,6 +68,7 @@
         </li>
       </ul>
     </div>
+    <input type="button" value="更多精彩瞬间" class="changeList seeMore" >
   </div>
 
   <!--头部-->
@@ -102,22 +103,22 @@
   <!--弹出层-->
   <div class="detailCover">
     <!--<section class="detailContent">-->
-      <h2>某团队活动纪念照片<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
-      <div class="detailPic picSlideBox clearfix">
-        <ul class="picSlideBig">
-          <li><img src="img/photos/photo-details-1.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-2.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-3.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-4.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-5.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-6.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-7.jpg" alt="123"></li>
-          <li><img src="img/photos/photo-details-8.jpg" alt="123"></li>
-        </ul>
-        <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
-        <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
-        <span class="picSlideBtn next" id="picSlideBtnNext"></span>
-      </div>
+    <h2>某团队活动纪念照片<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
+    <div class="detailPic picSlideBox clearfix">
+      <ul class="picSlideBig">
+        <li><img src="img/photos/photo-details-1.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-2.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-3.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-4.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-5.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-6.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-7.jpg" alt="123"></li>
+        <li><img src="img/photos/photo-details-8.jpg" alt="123"></li>
+      </ul>
+      <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
+      <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
+      <span class="picSlideBtn next" id="picSlideBtnNext"></span>
+    </div>
     <!--</section>-->
   </div>
 
