--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -193,7 +193,8 @@
                   </tr>
                 </tbody>
               </table>
-            </div>
+            </div> 
+            <button type="button" class="btn btn-block btn-lg btn-success fbpx-confirm">确认提交品项</button>
           </form>
         </div>
         <!--修改品项-->
