--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <div class="contactus-info-text">
             <h3>联系我们 / 商务合作</h3>
             <div class="contactus-info-text-left">
-              <p><span></span>Write</br>Us</p>
+              <p><span></span>Email</br>Us</p>
               <p><span></span>Call</br>Us</p>
               <p><span></span>Visit</br>Us</p>
             </div>
@@ -82,27 +82,22 @@
       </div>
     </section>
     <!--伙伴-->
-    <section class="contactus">
-      <h2>Get In Touch.</h2>
-      <div class="contactus-content clearfix">
-        <img src="img/about/contact-bg.jpg" alt="123" class="flyRightAnimate">
-        <article class="contactus-info flyLeftAnimate">
-          <div class="line"></div>
-          <div class="contactus-info-text">
-            <h3>联系我们 / 商务合作</h3>
-            <div class="contactus-info-text-left">
-              <p><span></span>Write</br>Us</p>
-              <p><span></span>Call</br>Us</p>
-              <p><span></span>Visit</br>Us</p>
-            </div>
-            <div class="contactus-info-text-right">
-              <p>hao@lanpai.com</p>
-              <p>021-6565656</p>
-              <p>上海浦东创新大道1号</p>
-            </div>
-          </div>
-        </article>
-      </div>
+    <section class="friends">
+      <h2>Our Friends.</h2>
+      <ul class="clearfix flyLeftAnimate">
+        <li><img src="img/friends/1.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/2.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/3.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/4.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/5.jpg" alt="Our Friends"></li>
+      </ul>
+      <ul class="clearfix flyRightAnimate">
+        <li><img src="img/friends/10.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/9.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/8.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/7.jpg" alt="Our Friends"></li>
+        <li><img src="img/friends/6.jpg" alt="Our Friends"></li>
+      </ul>
     </section>
   </div>
   <!--页尾-->
