--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -10,10 +10,6 @@
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <link href="../admin/css/admin-style.css" rel="stylesheet">
-  <style>
-
-  </style>
-  <!--<link href="../admin/css/admin-style.css" rel="stylesheet">-->
   <!--[if lte IE 9]>
     <script src="../js/html5shiv.min.js"></script>
     <script src="../js/respond.min.js"></script>
@@ -35,7 +31,7 @@
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <p class="navbar-text">后台管理系统</p>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="../index.html"><span class="glyphicon glyphicon-globe"></span> 网站首页</a></li>
+          <li><a href="../index.html"><span class="glyphicon glyphicon-home"></span> 网站首页</a></li>
           <li><a href=""><span class="glyphicon glyphicon-off"></span> 退出</a></li>
         </ul>
       </div>
